# relay

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AND_FEEDBACK_AGREEMENT.md  LICENSE  NOTICE.md  README.md  SECURITY.md  index.html  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-feature.yml  03-enhancement.yml  05-question.yml
.github/workflows/: ci.yml
app/: biome.json  commitlint.config.cjs  package.json  tsconfig.json  vite.config.ts
app/scripts/: postinstall.ts  relay-vite-dev-server.mjs  setup.ts
app/scripts/check/: frontend.sh
app/scripts/hooks/: pre-commit.ts
app/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
app/src/bootstrap/: bootstrap-async.ts  bootstrap-errors.ts  bootstrap-sync.ts  initialize-app-bootstrap.ts  use-app-bootstrap.ts
app/src/extensions/bundled/: .gitignore
app/src/extensions/hooks/: use-extension-install-prompt.ts
app/src/extensions/icon-themes/: icon-theme-initializer.ts  icon-theme-registry.ts  types.ts
app/src/extensions/installer/: extension-installer.ts
app/src/extensions/languages/: language-packager.test.ts  language-provider.ts
app/src/extensions/registry/: extension-registry.ts  extension-store-runtime.ts  extension-store-types.ts  extension-store.ts
app/src/extensions/themes/: base-theme-extension.ts  theme-initializer.ts  types.ts
app/src/features/command-palette/: store.ts
app/src/features/keymaps/: init.ts  types.ts
app/src/features/onboarding/: store.ts
app/src/features/remote/: connection-dialog.tsx  connection-list.tsx  password-prompt-dialog.tsx  remote-connection-view.tsx  types.ts
app/src/features/settings/: store.ts
app/src/lib/platform/: clipboard.ts  core.ts  dialog.ts  events.ts  opener.ts  path.ts  shell.ts  updater.ts  webview.ts  window.ts
app/src/styles/: base.css  fonts.css  layout.css  tokens.css
app/src/ui/: badge.tsx  button.tsx  checkbox.tsx  command.tsx  context-menu.tsx  control-field.ts  dialog.tsx  dropdown.tsx  input.tsx  keybinding.tsx  number-input.tsx  pane.tsx  search.tsx  select.tsx  switch.tsx  table-view.tsx  table.tsx  textarea.tsx  toast.tsx  toggle.tsx  tooltip.tsx
app/src/utils/: api-base.ts  date.ts  fit-viewport.ts  frecency.ts  keybinding-display.ts  path-helpers.ts  platform.ts  storage.ts  stream-utils.ts  zustand-selectors.ts
backend/: Cargo.toml  rustfmt.toml
backend/crates/ai/: Cargo.toml
backend/crates/ai/src/: chat_history.rs  lib.rs
backend/crates/ai/src/acp/: bridge_init.rs  bridge_prompt.rs  config.rs  terminal_state.rs  types.rs
backend/crates/database/src/: connection_manager.rs  lib.rs  sql_common.rs
backend/crates/database/src/providers/: duckdb.rs  mod.rs  mongodb.rs  mysql.rs  postgres.rs  redis_db.rs  sqlite.rs
backend/crates/extensions/src/: installer.rs
backend/crates/github/src/: lib.rs  models.rs  serde_helpers.rs  tests.rs
backend/crates/lsp/: Cargo.toml
backend/crates/lsp/src/: config.rs  lib.rs  manager.rs  manager_state.rs  manager_support.rs  types.rs  utils.rs
backend/crates/project/src/: lib.rs
backend/crates/remote/src/: file_ops.rs  ssh_helpers.rs  state.rs  terminal.rs
backend/crates/runtime/: Cargo.toml
backend/crates/runtime/src/: bun.rs  downloader.rs  lib.rs  node.rs
backend/crates/server/: Cargo.toml
backend/crates/server/src/: auth.rs  dev_vite.rs  events.rs  main.rs  router.rs  secrets.rs  state.rs  static_files.rs  terminal.rs  webauthn.rs
backend/crates/terminal/: Cargo.toml
backend/crates/terminal/src/: config.rs  connection.rs  shell.rs
backend/crates/tooling/: Cargo.toml
backend/crates/tooling/src/: lib.rs  registry.rs  types.rs
backend/crates/version-control/src/git/: blame.rs  branch.rs  commit.rs  diff.rs  hunk.rs  mod.rs  remote.rs  staging.rs  stash.rs  status.rs  tag.rs  types.rs  utils.rs  worktree.rs
backend/scripts/check/: rust.sh
common/: README.md
crates/ai/src/acp/: bridge.rs  mod.rs  (+3 more)
crates/database/: Cargo.toml
crates/extensions/: Cargo.toml
crates/github/: Cargo.toml
crates/github/src/: api.rs  cli.rs
crates/lsp/src/: client.rs
crates/project/: Cargo.toml
crates/remote/: Cargo.toml
crates/remote/src/: lib.rs
crates/server/src/: chat_history.rs  dev_proxy.rs  dev_vite.rs  main.rs  paths.rs  rpc.rs  state.rs  static_files.rs
crates/terminal/src/: lib.rs  manager.rs
crates/tooling/src/: installer.rs
crates/version-control/: Cargo.toml
scripts/: check.sh
scripts/hooks/: pre-commit.ts
src/extensions/languages/: full-extensions.ts  language-packager.ts
src/extensions/loader/: extension-loader.ts
src/extensions/registry/: extension-store-bootstrap.ts  extension-store-helpers.ts  extension-store-lifecycle.ts
src/extensions/themes/: theme-loader.ts  theme-registry.ts  theme-schema.ts
src/extensions/types/: extension-manifest.ts
src/lib/platform/: app.ts  deep-link.ts  fs.ts  http.ts  invoke.ts  os.ts  process.ts  store.ts  webview-window.ts
src/styles/: scrollbars.css  theme.css  utilities.css
src/ui/: tabs.tsx
src/utils/: frontend-trace.ts  fuzzy-matcher.tsx
(+751 files in other folders)
