[workspace]
members = [
  "crates/server",
  "crates/runtime",
  "crates/project",
  "crates/database",
  "crates/ai",
  "crates/lsp",
  "crates/remote",
  "crates/terminal",
  "crates/tooling",
  "crates/version-control",
]
resolver = "2"

[patch.crates-io]
agent-client-protocol = { path = "vendor/agent-client-protocol" }
agent-client-protocol-schema = { path = "vendor/agent-client-protocol-schema" }

[workspace.lints.clippy]
uninlined_format_args = "allow"
new-without-default = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
