[package]
name = "relay-database"
version = "0.1.0"
edition = "2024"

[dependencies]
duckdb = { version = "1.4.4", features = ["bundled"] }
futures-util = "0.3"
mongodb = "3.5.1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "mysql",
] }
tokio = { version = "1.0", features = ["full"] }
