[package]
name = "relay-extensions"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
flate2 = "1.0"
log = "0.4"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.5"
tar = "0.4"
relay = { version = "2", features = ["test"] }
