[package]
name = "relay-version-control"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
chrono = { version = "0.4.41", features = ["serde"] }
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20.0"
