[package]
name = "relay-tooling"
version = "0.1.0"
edition = "2024"

[dependencies]
relay-runtime = { path = "../runtime" }
flate2 = "1.0"
log = "0.4"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3.20.0"
walkdir = "2.5.0"
which = "7.0"
zip = "2.2"
